force-app/main/default/objects/tc9_et__Time2PayEvent__e/tc9_et__Time2PayEvent__e.object-meta.xml
<CustomObject>
    <label>Time2Pay Event</label>
    <pluralLabel>Time2Pay Events</pluralLabel>
</CustomObject>