force-app/main/default/objects/tc9_et__Time2PayEvent__e/fields/tc9_et__All_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__All_Record_Ids__c</fullName>
    <description>All records selected for a process of which this platform event is subscribed to</description>
    <label>All Record Ids</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>