force-app/main/default/objects/tc9_et__Time2PayEvent__e/fields/tc9_et__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Job_Id__c</fullName>
    <description>Used for holding the current Apex Job ID</description>
    <label>Job Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>