force-app/main/default/objects/tc9_et__Time2PayEvent__e/fields/tc9_et__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Record_Id__c</fullName>
    <description>Record Id/s that relate to this result</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>