force-app/main/default/objects/tc9_et__Time2PayEvent__e/fields/tc9_et__Result__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Result__c</fullName>
    <description>To provide a status of Success or Failed and further result details</description>
    <label>Result</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>