force-app/main/default/objects/tc9_et__Time2PayEvent__e/fields/tc9_et__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Status__c</fullName>
    <description>To maintain custom status or status of the result</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>