force-app/main/default/objects/tc9_et__Time2PayEvent__e/fields/tc9_et__Successful_Records_Ids__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Successful_Records_Ids__c</fullName>
    <description>All records passed through to a process of which this platform event is subscribed to and completed successfully</description>
    <label>Successful Records Ids</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>