force-app/main/default/objects/tc9_et__Time2PayEvent__e/fields/tc9_et__Variant__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Variant__c</fullName>
    <description>Used to indicate the type of result (i.e success,error,warning)</description>
    <label>Variant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>